Changed Math.max(Math.min) expressions to Math.clamp